# backend

./: .env.example  .gitignore  demo.py  docker-compose.local-ci.yml  fetch_subtitles.py  pyproject.toml  subtitles_output.txt
alembic/: env.py
alembic/versions/: 2707515a3b82_initial_schema.py
app/: config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  dashboard.py  dictation.py  router.py  videos.py  vocabulary.py
app/core/: exceptions.py  security.py
app/models/: __init__.py  dictation.py  refresh_token.py  session.py  user.py  video.py  vocabulary.py
app/schemas/: auth.py  dictation.py  video.py  vocabulary.py
app/services/: dictation_service.py  level_service.py  srs_service.py  text_analysis_service.py  youtube_service.py
scripts/: docker-entrypoint.sh
tests/: test_dictation_service.py  test_level_service.py  test_youtube_service.py
